--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@tailwindcss/typography": "^0.5.10",
+    "clsx": "^2.0.0",
     "react": "^18",
     "react-dom": "^18",
     "next": "13.5.4"
@@ -16,6 +20,7 @@
   "devDependencies": {
     "autoprefixer": "^10",
     "postcss": "^8",
-    "tailwindcss": "^3"
+    "tailwindcss": "^3",
+    "@tailwindcss/aspect-ratio": "^0.4.2"
   }
 }
