--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/typography": "^0.5.10",
     "clsx": "^2.0.0",
+    "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "autoprefixer": "^10",
     "postcss": "^8",
-    "tailwindcss": "^3",
-    "@tailwindcss/aspect-ratio": "^0.4.2"
+    "tailwindcss": "^3"
   }
 }
