--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/typography": "^0.5.10",
     "@types/react-slick": "^0.23.11",
+    "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "n": "^9.2.0",
     "next": "13.5.4",
