--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "types": [
+      // ... your other types
+      "node"
+    ],
     "jsx": "react",
     "paths": {
       "@/*": ["./*"]
