--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/react-slick": "^0.23.11",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
+    "debug": "^4.3.4",
     "n": "^9.2.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "supports-color": "^9.4.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
