--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-reveal": "^1.2.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "supports-color": "^9.4.0"
