--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx", "components/Carousel/Carousel.jsx", "app/art/page.jsx", "components/Navbar/CalendarWidget/open-cal.jsx"
-  ],
+, "app/art/paintings/page.js"  ],
   "exclude": [
     "node_modules"
   ]
