--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "esnext"
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@next/third-parties/google": [ "./node_modules/@next/third-parties/dist/google" ]
     },
     "allowJs": true,
     "skipLibCheck": true,
