--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,8 @@
     ],
     "jsx": "react",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@next/third-parties/google": [ "./node_modules/@next/third-parties/dist/google" ]
     }
   }
 }
