--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "@emotion/react": "^11.11.3",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@next/third-parties": "^14.2.3",
     "@tailwindcss/typography": "^0.5.10",
     "@types/react-slick": "^0.23.11",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "debug": "^4.3.4",
     "n": "^9.2.0",
-    "next": "13.5.4",
+    "next": "^14.2.3",
     "react": "^18",
+    "react-alice-carousel": "^2.9.1",
     "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18",
     "react-slick": "^0.29.0",
