--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/third-parties": "^14.2.3",
     "@tailwindcss/typography": "^0.5.10",
     "@types/react-slick": "^0.23.11",
+    "animate.css": "^4.1.1",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "debug": "^4.3.4",
