--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-alice-carousel": "^2.9.1",
     "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18",
+    "react-photo-album": "^3.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "supports-color": "^9.4.0",
