--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "debug": "^4.3.4",
+    "framer-motion": "^11.5.5",
     "masonry-layout": "^4.2.2",
     "n": "^9.2.0",
     "next": "^14.2.3",
